...
<!--        android:layout_centerInParent="true"-->
<!--        android:text="Home"-->
<!--        android:textSize="50sp"-->
<!--        android:textStyle="bold" />-->

    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="80dp"
        android:text="@string/steps"
...
        android:background="@drawable/circle"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/bottom_navigation"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
...
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="156dp"
        android:text="Add Workout"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="16dp"
...
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="34dp"
        android:text="Add Sleep"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="88dp"
...
